# ProjectPinID

./: .gitignore  README.md
project/: CMakeLists.txt
project/I2C_master/: CMakeLists.txt  I2C_master.c
project/I2C_slave/: CMakeLists.txt  I2C_slave.c
project/SPI_master/: CMakeLists.txt  SPI_master.c
project/SPI_slave/: CMakeLists.txt  SPI_slave.c
project/SPI_test/: CMakeLists.txt  SPI_test.c
project/UART_debugger/: CMakeLists.txt  UART_debugger.c
project/UART_test/: CMakeLists.txt  UART_test.c
project/combine/: CMakeLists.txt  combine.c
project/integrated/: CMakelists.txt  integrated.c
project/oled_test/: CMakeLists.txt  oled_test.c
project/recieveUART/: CMakeLists.txt  recieveUART.c
project/test/: CMakeLists.txt  test.c
project/transmitUART/: CMakeLists.txt  transmitUART.c
