if (NOT PICO_NO_HARDWARE)
    add_subdirectory(combine)
    add_subdirectory(UART_test)
    add_subdirectory(UART_debugger)
    add_subdirectory(oled_test)
    add_subdirectory(SPI_test)
    add_subdirectory(I2C_slave)
    add_subdirectory(I2C_master)
    add_subdirectory(SPI_slave)
    add_subdirectory(SPI_master)
    add_subdirectory(integrated)
endif ()
